# redis-parityFilter-module

./: README.md
redis-parity/: CMakeLists.txt  library.h
redis-parity/c语言版 废弃中/: CMakeLists.txt
redis-parity/c语言版 废弃中/src/: base.h  filter.c  filterInit.h  parity.h  parityHash.c  queue.h
redis-parity/c语言版 废弃中/src/assist/: base.h  bitOp.h  parityHash.h
redis-parity/c语言版 废弃中/src/persist/: persist.h
redis-parity/rust版/: Cargo.toml
redis-parity/rust版/src/: lib.rs
redis-parity/rust版/src/pf_filter/: mod.rs  pf.rs
redis-parity/rust版/src/redis/: mod.rs  raw.rs
redis-parity/src/: base.h  bash.c  bitOp.c  filter.c  filterInit.c  filterInit.h  keyAddAndDelOp.c  keyAddAndDelOp.h  parity.c  parity.h  parityHash.c  sliceAndPfOp.c  sliceAndPfOp.h
redis-parity/src/assist/: bitOp.c  parity.c  parity.h  parityHash.c  queue.c  queue.h
redis-parity/src/persist/: persist.c  persist.h
