[package]
name = "redisParityFilter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
name = "parity_filter"

[dependencies]
libc = "0.2.0"
bit-vec = "0.6.3"
bitflags = "1.3"
time = "0.3.5"
redis-module = "0.25.0"

[build-dependencies]
cc = "1.0.28"